openwhisk/prototypes/influxdb/ingress-influxdb-second-instance.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  routes:
  - kind: Rule
    match: Host(`influxdb-second-instance-gateway.liquidfaas.cloud`)
    services:
    - kind: Service
      name: influxdb-second-instance-influxdb2
      namespace: influxdb-second-instance
      port: 80
